--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "niklauslee.staruml-ddl",
-    "title": "DDL (Data Definition Language)",
-    "description": "Generate DDL (Data Definition Language) from ERD",
-    "homepage": "https://github.com/niklauslee/staruml-ddl",
-    "issues": "https://github.com/niklauslee/staruml-ddl/issues",
-    "keywords": ["ddl", "erd", "database"],
-    "version": "0.9.1",
-    "author": {
-        "name": "Minkyu Lee",
-        "email": "niklaus.lee@gmail.com",
-        "url": "https://github.com/niklauslee"
-    },
-    "license": "MIT",
-    "engines": {
-        "staruml": ">=2.0.0"
-    }
+  "name": "niklauslee.staruml-ddl",
+  "title": "DDL (Data Definition Language)",
+  "description": "Generate DDL (Data Definition Language) from ERD",
+  "homepage": "https://github.com/niklauslee/staruml-ddl",
+  "issues": "https://github.com/niklauslee/staruml-ddl/issues",
+  "keywords": ["ddl", "erd", "database"],
+  "version": "0.9.2",
+  "author": {
+    "name": "Minkyu Lee",
+    "email": "niklaus.lee@gmail.com",
+    "url": "https://github.com/niklauslee"
+  },
+  "license": "MIT",
+  "engines": {
+    "staruml": "^3.0.0"
+  }
 }
